[package]
name = "smol-vs-tokio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
smol = "2.0.2"
async-net = "2.0.0"      # For smol TCP
futures = "0.3.31"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
async-compat = "0.2.5"

[[bin]]
name = "tokio_server"
path = "src/tokio_server.rs"

[[bin]]
name = "smol_server"
path = "src/smol_server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "multiple_clients"
path = "src/multiple_clients.rs"